# pybot

./: .gitignore  README.md  pyproject.toml
app/: chatbot.py  main.py  streamlit_app.py
config/: config.py  errors.py  llm.py  logger.py  prompts.py
