[project]
name = "pybot"
version = "0.1.0"
description = ""
authors = [
    {name = "MieleSantos",email = "mielesnts@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "loguru>=0.7.0,<0.8.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "streamlit>=1.44.0,<2.0.0",
    "taskipy>=1.14.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "isort>=5.13.0",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.isort]
profile = "black"
line_length = 88
py_version = 312

[tool.taskipy.tasks]
run = "python -m app.main"
web = "streamlit run app/streamlit_app.py"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
sort = "isort ."
sort-check = "isort . --check-only"
check = "task lint && task format-check && task sort-check"
